<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tip Me Good Sir!</string>
    <string name="amount">Amount</string>
    <string name="tip">Tip</string>
    <string name="calc">Calculate</string>
    <string name="tip_value_10">10%</string>
    <string name="tip_value_15">15%</string>
    <string name="tip_value_18">18%</string>
    <string name="tip_value_20">20%</string>
</resources>
