<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#6ad1e6">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:id="@+id/tips"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/tipAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tip_value_10"
            android:id="@+id/tip1"
            android:layout_weight="0.25"
            android:background="#e0e3cc"
            android:layout_marginRight="5dp"
            android:textColor="#f28430"
            android:buttonTint="#f28430" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tip_value_15"
            android:id="@+id/tip2"
            android:layout_weight="0.25"
            android:background="#e0e3cc"
            android:layout_marginRight="5dp"
            android:textColor="#f28430"
            android:buttonTint="#f28430" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tip_value_18"
            android:id="@+id/tip3"
            android:layout_weight="0.25"
            android:background="#e0e3cc"
            android:checked="true"
            android:layout_marginRight="5dp"
            android:textColor="#f28430"
            android:buttonTint="#f28430" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tip_value_20"
            android:id="@+id/tip4"
            android:layout_weight="0.25"
            android:background="#e0e3cc"
            android:textColor="#f28430"
            android:buttonTint="#f28430" />
    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/calc"
        android:id="@+id/btnTip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff"
        android:background="#f28430" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/billAmount"
        android:background="#e0e3cc"
        android:maxLines="1"
        android:typeface="sans"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textIsSelectable="true"
        android:textColor="#f28430"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:id="@+id/tipAmount"
        android:background="#e0e3cc"
        android:typeface="sans"
        android:paddingLeft="5dp"
        style="@android:style/Widget.EditText"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textIsSelectable="true"
        android:textColor="#f28430"
        android:layout_below="@+id/billAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

</RelativeLayout>
